2.2.18 java11 compatibility
* `ant build` works on JDK 11 but tests are still incompatible.

* Remove o.a.c.utils.concurrent.Locks and add ReentrantLock directly to o.a.c.db.AtomicBTreeColumn

* Remove usage of sun.nio.ch.DirectBuffer for memory allocation

* Update JVM params for G1GC and add JPMS settings

* Add @generated annotation dependency - allows bypass of updating several dependencies & remove unneeded tools.jar

* Fix nits around scoping of new lock and formatting

* Update JPMS flags for clients and the server to be loaded from external options files

* Add in a new line for options file and force call to FileUtils#clean

* Verify java 11 is used to run cassandra and its client tools